--- a/index.html
+++ b/index.html
@@ -250,8 +250,8 @@
 
   <script src="js/utils.js"></script>
   <script src="js/page.js"></script>
+  <script src="js/debounce.js"></script>
   <script src="js/filters.js"></script>
-  <script src="js/data.js"></script>
   <script src="js/backend.js"></script>
   <script src="js/popups.js"></script>
   <script src="js/pin.js"></script>
